[INFER] Block repeated recursive EnterMethodJIT on the same stack frame from loop backedges, bug 657890.