js/src/jit-test/tests/jaeger/bug657890.js
@@ -1,0 +1,6 @@
+function f() {};
+var x;
+for(var i=0; i<200; i++) {
+    x = f.bind(x, x, 2);
+    gc();
+}
